# c_study

./: CMakeLists.txt  README.md  main.c
arr/: array.c  array.h
cal/: cal.c  cal.h
constant/: constant.c  constant.h
enum/: enum.c  enum.h
error/: error.c  error.h
file/: file.c  file.h
point/: point.c  point.h
predefine/: pre.c  pre.h
str/: str.c  str.h
struct/: struct.c  struct.h
test/net/: domian_analysis.c  domian_analysis.h
test/util/: dns_util.c  dns_util.h
type/: type.c  type.h
